# striem

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
extra/: vector.yaml
lib/api/: Cargo.toml
lib/api/src/: actions.rs  alerts.rs  detections.rs  features.rs  lib.rs  main.rs  persist.rs  persistence.rs  query.rs  routes.rs  server.rs  vector.rs
lib/api/src/sources/: aws_cloudtrail.rs  mod.rs  okta.rs
lib/common/src/: prelude.rs
lib/config/: Cargo.toml
lib/config/src/: api.rs  input.rs  lib.rs  output.rs
lib/storage/: Cargo.toml
lib/storage/src/: backend.rs  convert.rs  writer.rs
lib/vector/: Cargo.toml  build.rs
lib/vector/src/: server.rs
src/: app.rs  detection.rs  main.rs
ui/: package-lock.json
ui/app/: layout.tsx  page.tsx
ui/app/components/: Sidebar.tsx
ui/app/components/Explore/: index.tsx
ui/app/components/Sources/: index.tsx
