[package]
name = "striem"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  ".",
  "lib/api",
  "lib/common",
  "lib/config",
  "lib/storage",
  "lib/vector"]

[dependencies]
striem_api.workspace = true
striem_common.workspace = true
striem_config.workspace = true
striem_storage.workspace = true
striem_vector.workspace = true

anyhow.workspace = true
async-trait.workspace = true
backoff.workspace = true
env_logger.workspace = true
futures = "0.3.31"
futures-util.workspace = true
glob.workspace = true
log.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sigmars.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[workspace.dependencies]

striem_api.path = "lib/api"
striem_common.path = "lib/common"
striem_config.path = "lib/config"
striem_storage.path = "lib/storage"
striem_vector.path = "lib/vector"

anyhow = "1.0"
arc-swap = "1"
arrow = "56.2"
async-trait = "0.1"
axum = { version = "0.8"}
backoff = { version = "0.4", features = ["tokio"]}
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
duckdb = { version = "1.4", features = ["modern-full", "json", "parquet", "vtab", "bundled", "r2d2" ] }
env_logger = "0.11"
erased-serde = "0.4"
futures-util = "0.3"
glob = "0.3"
lazy_static = {version = "1.5"}
log = "0.4"
num_enum = "0.7"
parquet = { version = "56.2", features = ["json", "async", "tokio"] }
prost = { version = "0.13" }
prost-types = "0.13"
r2d2 = "0.8"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rmcp = { version = "0.8", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sigmars = { git = "https://github.com/crowdalert/sigmars.git", branch = "taxonomy" }
tempfile = "3"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
toml = { version = "0.9", default-features = false, features = ["serde", "display"] }
tonic = { version = "0.13", default-features = false, features = ["transport", "codegen", "prost", "gzip", "router"] }
tonic-build = { version = "0.13", default-features = false, features = ["transport", "prost"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
url = "2.5"
uuid = { version = "1.11", features = ["v7", "serde"] }
